--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Captcha Verification</title>
 </head>
-<body class="m-36">
+<body class="m-5 mt-44 md:m-36">
     <header class="text-center text-3xl m-5 font-bold">
         <h1 id="captchagen">QwerTy</h1>
     </header>
     <main>
-        <div class="flex justify-center m-5 gap-5">
-            <input id="input" class="border border-black w-2/6 rounded-full pr-5 pl-5 p-2" placeholder="Enter the Captcha" type="text">
+        <div class="flex justify-center items-center flex-col md:flex-row m-5 gap-5">
+            <input id="input" class="border border-black w-5/6 md:w-2/6 rounded-full pr-5 pl-5 p-2" placeholder="Enter the Captcha" type="text">
             <button id="verifybtn" class="bg-green-600 border border-green-600 rounded-md pr-5 pl-5 text-white font-bold p-2">Verify</button>
         </div>
     </main>
